2006-11-13  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* src/parser/uparser.cc, src/parser/bison/ugrammar.y,
	* src/uconnection.cc: Here.

2006-11-12  Jean-Christophe Baillie  <baillie@gostai.com>

	fix ticket #62 (wrong tags in 'if' command)
	* src/ucommand.cc: done.

2006-11-12  Jean-Christophe Baillie  <baillie@gostai.com>

	fix ticket #41, not accesschange on object attributes 
	* src/uvariable.cc: add a call to UVariable::get for each attribute of
        the object.

2006-11-12  Jean-Christophe Baillie  <baillie@gostai.com>

It is now possible to redefine a remote or plugged C++ method from within URBI
itself, while still accessing the old definition. Example:

myobj = new remoteobj;
function myobj.foo(x)
{
  remoteobj::foo(x);
  ...
};

Since local redefinitions of functions override remote/plugged definitions, the
local 'myobj.foo' will always be called, bypassing the remote version (only
accessible now via the :: construct).

	extend support of :: to uobjects 
	* src/ucommand.cc: add support for :: with remote/plugged uobjects.

2006-11-12  Jean-Christophe Baillie  <baillie@gostai.com>

Native local functions must override plugins and remote functions definition
when a name conflict occurs.
This means that it is possible to redefine a remote function written in C++
by redefining the method in URBI (and possibly redirect it to another C++
method).

	change functions evaluation priority to: native, plugged, remote  
	* src/ucommand.cc: swap order of evaluation for possible function name
        match.

2006-11-12  Jean-Christophe Baillie  <baillie@gostai.com>

	add support for :: in assignements 
	* src/ucommand.cc: add same support of :: for UCommand_ASSIGN_VALUE.

2006-11-12  Jean-Christophe Baillie  <baillie@gostai.com>

The idea is to be able to call parent methods inside redefined children
methods (see NEWS and ticket #65).

	add support for :: construct (ticket #65) 
	* NEWS: add description of recent changes.